--- a/_dev/css/_syntax-highlighting.scss
+++ b/_dev/css/_syntax-highlighting.scss
@@ -4,6 +4,7 @@
 .highlight {
   margin: $base-spacing 0;
   box-shadow: 0px 0px 2px rgba($black-color, .1);
+  overflow-x: auto;
 
   code {
     background-color: transparent;
