--- a/_dev/css/base/_typography.scss
+++ b/_dev/css/base/_typography.scss
@@ -32,7 +32,7 @@ h2 {
 }
 
 h3 {
-  font-size: rem(24);
+  font-size: rem(23);
 }
 
 h4 {
